根据 TPS 调整配置的功能

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,3 +10,34 @@ deny-any-command:
     - list
     - tps
     - skin
+
+# 根据 TPS 调整配置
+tps-configure:
+  enable: false
+  # 限制比例(>= TPS: 各项参数控制比例)
+  rates:
+    19.5: 100
+    19: 90
+    18: 80
+    17: 70
+    16: 60
+    15: 50
+    14: 40
+    13: 30
+    12: 20
+    11: 17
+    10: 15
+    9: 13
+    8: 11
+    7: 9
+    6: 7
+    5: 6
+    4: 5
+    3: 4
+    2: 3
+    1: 2
+    0: 1
+  # 控制间隔(Tick)，实际可能较此值稍稍落后
+  split: 100
+  # 内部用于控制的 TPS 最大单次回升量
+  max-up: 0.8
